--- a/PotatoUtils.GhostArchiver.App/PotatoUtils.GhostArchiver.App.csproj
+++ b/PotatoUtils.GhostArchiver.App/PotatoUtils.GhostArchiver.App.csproj
@@ -14,7 +14,7 @@
 
   <ItemGroup>
     <Reference Include="PotatoUtils.Logger">
-      <HintPath>..\..\PotatoUtils.Logger\PotatoUtils.Logger\bin\Debug\net6.0\PotatoUtils.Logger.dll</HintPath>
+      <HintPath>..\lib\PotatoUtils.Logger.dll</HintPath>
     </Reference>
   </ItemGroup>
 
