--- a/PotatoUtils.GhostArchiver.Core/PotatoUtils.GhostArchiver.Core.csproj
+++ b/PotatoUtils.GhostArchiver.Core/PotatoUtils.GhostArchiver.Core.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -12,7 +12,7 @@
 
   <ItemGroup>
     <Reference Include="PotatoUtils.Logger">
-      <HintPath>..\..\PotatoUtils.Logger\PotatoUtils.Logger\bin\Debug\net6.0\PotatoUtils.Logger.dll</HintPath>
+      <HintPath>..\lib\PotatoUtils.Logger.dll</HintPath>
     </Reference>
   </ItemGroup>
 
